Bug 122009 - Notebookbar is displayed in fullscreen mode
Summary: Notebookbar is displayed in fullscreen mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.0.0.beta1+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords:
: 122010 (view as bug list)
Depends on:
Blocks: Notebookbar
  Show dependency treegraph
 
Reported: 2018-12-10 12:58 UTC by Xisco Faulí
Modified: 2018-12-28 17:24 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-12-10 12:58:40 UTC
Steps to reproduce:
1. open writer
2. Change to view to tabbed notebookbar
3. Go to view - Full Screen

-> Notebookbar is displayed. it doesn't happen in normal view

Version: 6.2.0.0.beta1+
Build ID: 01fea181faf92a3498370460d3db2254da11c3e2
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 raal 2018-12-10 16:40:15 UTC
Confirm with Version: 6.3.0.0.alpha0+
Build ID: 1ee8d4f63adf3113a4733a479c8faf9eb65f7b8d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3;
Comment 2 andreas_k 2018-12-10 23:26:10 UTC
confirm that NB is displayed but when does it crash? on windows I didn't get a crash.

NB has some trouble with fullscreen and edit mode.
Comment 3 Xisco Faulí 2018-12-10 23:37:20 UTC
it seems the crash is only happening in GTK3. I'll report it in a different ticket...
Comment 4 Xisco Faulí 2018-12-10 23:58:39 UTC
Patch in gerrit -> https://gerrit.libreoffice.org/#/c/64911/
Comment 5 Xisco Faulí 2018-12-11 17:46:15 UTC
*** Bug 122010 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2018-12-12 10:29:42 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/3b6ee27e4bea1414042550f078f30fe3b7845a11%5E%21

tdf#122009: Hide notebookbar in full screen

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2018-12-12 14:48:46 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/7517ac7f0fca2460e9e3e75cfaebab305a806715%5E%21

tdf#122009: Hide notebookbar in full screen

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 BogdanB 2018-12-28 17:24:07 UTC
Solved.

Verified on
Version: 6.3.0.0.alpha0+
Build ID: f43699621adf44627aa7529b37677e2c7f892b8f
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-12-27_21:01:50
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
Calc: threaded