tdf#122009: Hide notebookbar in full screen

Follow same logic as in presentation mode. See
6a9326803c01f4c9bc7da855053ce4e80646fad8

Change-Id: I89c31e23dd97e647ab380aa30635acda46064b2f